Allow passing schema initializer to Iceberg query runner